[package]
name = "Learning_wgpu"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
winit = { version = "0.30.9", features = ["android-native-activity"]}
env_logger = "0.11.6"
log = "0.4.26"
wgpu = "25.0.2"
anyhow = "1.0.98"
pollster = "0.4.0"
bytemuck = {version = "1.23.1", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
